source/objects/Project__c/fields/Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration__c</fullName>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>