source/objects/Project__c/fields/Approved_Duration__c.field-meta.xml
<CustomField>
    <fullName>Approved_Duration__c</fullName>
    <label>Approved Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>