source/objects/Project__c/fields/Budget_Duration__c.field-meta.xml
<CustomField>
    <fullName>Budget_Duration__c</fullName>
    <label>Budget Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>