source/objects/Project__c/fields/Complete_by_Duration__c.field-meta.xml
<CustomField>
    <fullName>Complete_by_Duration__c</fullName>
    <label>% Complete by Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>