source/objects/Project__c/fields/P_O_Amount__c.field-meta.xml
<CustomField>
    <fullName>P_O_Amount__c</fullName>
    <label>P.O. Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>