source/objects/Project__c/fields/P_O_Number__c.field-meta.xml
<CustomField>
    <fullName>P_O_Number__c</fullName>
    <label>P.O. Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>