source/objects/Project__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Internal Non-Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>