source/objects/Project__c/fields/Remaining_Duration__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Duration__c</fullName>
    <label>Remaining Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>