source/objects/Project__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <label>Sales Order Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>