source/objects/Project__c/fields/Service_Budget__c.field-meta.xml
<CustomField>
    <fullName>Service_Budget__c</fullName>
    <label>Service Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>