source/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project_ID__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Customer__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Complete_by_Duration__c</columns>
    <columns>Budget_Duration__c</columns>
    <columns>Actual_Duration__c</columns>
    <columns>Approved_Duration__c</columns>
    <columns>Remaining_Duration__c</columns>
    <columns>Estimated_Duration__c</columns>
    <columns>Contract_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>